Version 0.67

- Unit nosotime completely implemented.
- Implemented VPN filter.

Version 0.66

- Tor IPS filter implemented.

Version 0.65

- Fixed leak sending duplicated payments with different timestamps.

Version 0.63 - 0.64

- Activated AMI services.
- Included MacOS support.
- Fixed readme.
- Changed donation address on readme.

Version 0.62

- Implemented signed solutions.

Version 0.61

- Implemented AMI array.
- Fixed loss coins leak.

Version 0.60

- Included paid shares on block report.
- Improved payment result handling.
- Command available implemented.
- Paid on block track implemented.
- BALANCE command adjusted.
- Payment verification implemented.

Version 0.59

- Support for PoPW miners requests.
- Sumary support implemented.
- Support for miners donations.
- Option to pool owner donations.

Version 0.58

- Top share implemented.
- Adjust to remote info.

Version 0.57

- Added filtered IPs.
- Added pool public info.

Version 0.56

- Fixed pay interval bug.
- Added false confirmation when SHARES_LIMIT is reached.
- Added besthash miner to report.

Version 0.55

- Fixed PoPW.

Version 0.54

- Fixed bug on recent version.
- PoP&W implemented.
- Diffbase hardcoded.
- ClearAddress implemented.

Version 0.53

- Implemented lock addresses suport.

Version 0.52

- New defnodes variable.

Version 0.51

- Mainnet hashrate added to poolinfo.

Version 0.50

- Get fee recalculated.
- Miner device added to wrongshares.
- File access rewrited.

Version 0.48

- Fixed bug on GetMainnetTimestamp multi client creation.
- Fixed bug on GetAddressBalance multi client creation.
- Fixed bug on SendOrder multi client creation.
- Added poolname to options.
- Included poolname on payments reference.
- Added "Fiop" flags.

Version 0.47
- Save miners procedure improved.
- Fixed multi client creation bug on MNs request.
- Added MNs hash verification.

Version 0.46

- Pool sends UTCTime to miner on source request.

Version 0.45

- Fixed verificators calculation