@@ -2,4 +2,4 @@ Version 0.67
 
 - Unit nosotime completely implemented.
 - Implemented VPN filter.
-
+- Pool balance update at launch.
